# conveyer-vision

./: .gitignore  README.md  pyproject.toml  sim_config.yaml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
input/metadata/: objects.json
pipeline/: config.py  evaluate.py  precompute_gallery.py  run_pipeline.py
pipeline/utils/: camera.py  registration.py
