[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covision-pipeline"
version = "0.1.0"
description = "6-DoF pose estimation pipeline for conveyor-belt objects using stereo depth cameras"
requires-python = ">=3.11"
dependencies = [
    "open3d>=0.18.0",
    "trimesh>=4.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.66.0",
]

[project.scripts]
precompute-gallery = "pipeline.precompute_gallery:main"
run-pipeline = "pipeline.run_pipeline:main"
evaluate-pipeline = "pipeline.evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]
